--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ img {
 .header {
   border-bottom: 1px solid rgb(236, 236, 236);
 }
-.header-logo {
+.logo {
   margin-right: 93px;
   color: var(--accent-color);
   font-family: "Raleway", sans-serif;
@@ -73,7 +73,7 @@ img {
   font-weight: 700;
   letter-spacing: 0.78px;
 }
-.header-logo .header-logo-second {
+.logo .logo__change-color {
   color: #000000;
 }
 
@@ -85,13 +85,14 @@ img {
   padding-top: 32px;
   padding-bottom: 32px;
 }
-.header-list-nav {
+.site-nav{
   display: flex;
 }
-.header-list-nav .header-item:not(:last-child) {
+.site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
-.header-list-nav .header-link {
+.site-nav__link {
+  position: relative;
   display: block;
 
   color: var(--secondary-text-color);
@@ -103,10 +104,8 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-.header-link {
-  position: relative;
-}
-.header-link.current::after {
+
+.site-nav__link.current::after {
   content: "";
   position: absolute;
   display: block;
@@ -117,27 +116,27 @@ img {
   top: 52px;
   right: 0;
 }
-.header-list-nav .header-link:hover,
-.header-list-nav .header-link:focus {
+.site-nav__link:hover,
+.site-nav__link:focus {
   color: var(--accent-color);
   
 }
-.header-list-nav .current {
+.site-nav .current {
   color: var(--accent-color);
 }
-.header-contact-list {
+.contact-list {
   display: flex;
   margin-left: auto;
 }
 
-.header-contact-list .item {
+.contact-list__item {
   display: flex;
   align-items: center;
   margin-right: 50px; 
 }
 
 
-.header-contact-list .item:last-child {
+.contact-list__item:last-child {
   margin-right: 0;
 }
 
@@ -149,8 +148,7 @@ img {
   fill: currentColor;
 }
 
-.header-mail-link,
-.header-tel-link {
+.contact-list__link {
   display: flex;
   align-items: center;
   color: var(--primary-text-color);
@@ -164,8 +162,8 @@ img {
 }
 
 
-.header-contact-list .link:hover,
-.header-contact-list .link:focus {
+.contact-list .link:hover,
+.contact-list .link:focus {
   color: var(--accent-color);
 }
 /* hero */
@@ -190,7 +188,7 @@ img {
     background-repeat: no-repeat;
     background-position:  center;
 }
-.hero .hero-title {
+.hero__title{
   margin-top: 0;
   margin-bottom: 30px;
 
@@ -204,7 +202,7 @@ img {
   text-transform: uppercase;
   /*  background-color: #949393;   времено установил фон для визуализации потом удалю */
 }
-button.hero-button {
+.hero__button {
   padding: 10px 32px;
   min-width: 200px;
   border-radius: 4px;
@@ -269,7 +267,7 @@ button.hero-button {
   top: 8px;
   right: 8px;
 
-  fill: currentColor;
+  fill: #000000;
   stroke: rgba(0, 0, 0, 0.1);
   cursor: pointer;
   
@@ -277,7 +275,7 @@ button.hero-button {
 }
 
 .icon-close:hover {
-  color: var(--accent-color);
+  fill: var(--accent-color);
 }
 
 .form {
@@ -375,9 +373,6 @@ textarea::placeholder {
 }
 
 
-
-
-
 .checkbox {
     position: absolute;
     width: 1px;
@@ -460,24 +455,24 @@ textarea::placeholder {
 
 /* studio */
 
-.hidden-title {
+.studio__hidden-title {
   display: none;
 }
 .studio {
   padding: 94px 0 47px 0;
 }
-.studio-list {
+.studio__list  {
   display: flex;
 }
-.studio-list .item {
+.studio__item  {
   display: block;
   width: 270px;
   margin-right: 30px;
 }
-.studio-list .item:last-child {
+.studio__item:last-child {
   margin-right: 0;
 }
-.icon-block {
+.studio__icon {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -489,7 +484,7 @@ textarea::placeholder {
   fill: var(--secondary-text-color);
 }
 
-.studio-list .studio-title {
+.studio__title {
   margin-top: 0;
   margin-bottom: 10px;
 
@@ -499,7 +494,8 @@ textarea::placeholder {
   letter-spacing: 0.42px;
   text-transform: uppercase;
 }
-.studio .studio-text {
+.studio__text {
+  width: 279px;
   font-size: 14px;
   line-height: 1.71; /* 171.429% */
   letter-spacing: 0.42px;
@@ -509,22 +505,22 @@ textarea::placeholder {
 .work {
   padding: 47px 0 94px 0;
 }
-.work .work-title {
+.work__title {
   margin-top: 0;
   margin-bottom: 50px;
 }
-.work .work-list {
+.work__list {
   display: flex;
   justify-content: center;
 }
-.work .work-list .item:not(:last-child) {
+.worl__item:not(:last-child) {
   display: block;
   margin-right: 30px;
 }
-.work-list .item {
+.worl__item {
   position: relative;
 }
-.work-list .item .descr-block {
+.work__descr-block {
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -533,7 +529,7 @@ textarea::placeholder {
   opacity: 0.8;
 }
 
-.descr-block .descr {
+.work__descr {
   padding: 27px 0;
   text-align: center;
   color: #FFFFFF;
@@ -549,17 +545,16 @@ textarea::placeholder {
   padding: 94px 0;
   background-color: #f5f4fa;
 }
-.team .team-title {
+.team__title {
   margin-top: 0;
   margin-bottom: 50px;
 }
-.team .team-list {
+.team__list {
   display: flex;
   justify-content: center;
 }
 
-
-.team .team-list .item {
+.team__item {
   margin-right: 30px;
   width: 270px;
   border-radius: 0px 0px 4px 4px;
@@ -569,16 +564,17 @@ textarea::placeholder {
    background: rgb(255, 255, 255);
 }
 
-.team .team-list .item:last-child{
+.team__item:last-child {
   margin-right: 0;
 }
 
 
-/* .team .team-img {
-    margin-bottom: 30px;
-} */
+.team__bottom {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 
-.team .team-subtitle {
+.team__subtitle {
   color: var(--secondary-text-color);
   text-align: center;
   font-size: 16px;
@@ -586,25 +582,22 @@ textarea::placeholder {
   letter-spacing: 0.48px;
   margin-bottom: 10px;
 }
-.team .team-descr {
+.team__descr {
   text-align: center;
   font-size: 16px;
   letter-spacing: 0.48px;
   margin-bottom: 16px;
 }
-.team .team-bottom {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-.social-list {
+
+.social {
     display: flex;
     justify-content: center;
 }
 
-.social-item:not(:last-child) {
+.social__item:not(:last-child) {
     margin-right: 10px;
 }
-.social-link {
+.social__link {
     display: inline-flex;
     padding: 12px;
     color: #AFB1B8;  
@@ -616,11 +609,11 @@ textarea::placeholder {
   
 }
 
-.icon-social {
+.social__icon{
     fill: currentColor;
 }
 
-.social-link:hover {
+.social__link:hover {
     
     border-radius: 50px;
     background-color: var(--accent-color);
@@ -633,17 +626,17 @@ textarea::placeholder {
     padding: 94px 0;
 }
 
-.client-title {
+.client__title {
     text-align: center;
     margin-bottom: 50px;
 }
  
-.clients-list {
+.clients__list {
     display: flex;
     justify-content: space-between;
 }
 
-.client-link {
+.client__link {
     display: inline-flex;
     justify-content: center;
     align-items:center;
@@ -656,11 +649,11 @@ textarea::placeholder {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-client {
+.client__icon {
     fill: currentColor;
     
 }
-.client-link:hover {
+.client__link:hover {
     color: var(--accent-color);
     border: 1px solid var(--accent-color);
 }
@@ -670,20 +663,20 @@ textarea::placeholder {
   padding: 60px 0;
   background-color: #2f303a;
 }
-.footer-blocks {
+.footer__blocks {
   display: flex;
 }
-.footer-social {
+.social-media {
   
   margin:12px 90px 0 0;
 }
 
-.contact-info {
+.footer__contact-info {
   margin-right: 70px;
 }
 
 
-.footer .footer-logo {
+.footer__logo {
   display: block;
   margin-bottom: 20px;
 
@@ -693,18 +686,18 @@ textarea::placeholder {
   font-weight: 700;
   letter-spacing: 0.78px;
 }
-.footer .footer-logo-second {
+.footer__logo-second {
   color: #ffffff;
 }
-.footer address {
+.footer__address {
   font-style: normal;
   color: #ffffff;
   margin-bottom: 9px;
 }
-.address-item:not(:last-child) {
+.footer__item:not(:last-child) {
   margin-bottom: 9px;
 }
-.footer-contact-list .link {
+.footer__contact-list .link {
   color: rgba(255, 255, 255, 0.6);
   font-family: Roboto;
   font-size: 14px;
@@ -716,32 +709,12 @@ textarea::placeholder {
   /* background-color: #949393;   */
   /* времено установил фон для визуализации потом удвлю */
 }
-.footer-contact-list .link:hover,
-.footer-contact-list .link:focus {
+.footer__contact-list .link:hover,
+.footer__contact-list .link:focus {
   color: var(--accent-color);
 }
 
-.footer-list {
-  display: flex;
-}
-.footer-item:not(:last-child) {
-  margin-right: 10px;
-  justify-content: center;
-}
-.footer-social-link {
-  display:inline-flex;
-  padding: 12px;
-  fill:#FFFFFF;
-  background-color:  rgba(255, 255, 255, 0.1);
-  border-radius: 50px;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-social-link:hover{
-  background-color: var(--accent-color);
-}
-.footer-subheader {
+.social-media__subheader {
   margin-bottom: 20px;
   color: #FFFFFF;
   font-size: 14px;
@@ -751,17 +724,38 @@ textarea::placeholder {
   text-align: left;
   text-transform: uppercase;
 }
+.social-media__list {
+  display: flex;
+}
+.social-media__item:not(:last-child) {
+  margin-right: 10px;
+  justify-content: center;
+}
+.social-media__link {
+  display:inline-flex;
+  padding: 12px;
+  fill:#FFFFFF;
+  background-color:  rgba(255, 255, 255, 0.1);
+  border-radius: 50px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-media__link:hover{
+  background-color: var(--accent-color);
+}
+
 
 .subscribe {
   margin: 12px 12px 0 0;
 }
 
-.form-subscribe {
+.subscribe__form {
   display: flex;
   flex-direction: column;
 }
 
-.label-subscribe {
+.subscribe__label {
   color: #ffffff;
   font-size: 14px;
   font-weight: 700;
@@ -772,7 +766,7 @@ textarea::placeholder {
   margin-bottom: 20px;
 }
 
-.input-subscribe {
+.subscribe__input {
   width: 358px;
   height: 50px;
   padding: 15px 16px;
@@ -787,7 +781,7 @@ textarea::placeholder {
 }
 
 
-.subscribe-btn {
+.subscribe__btn {
   width: 200px;
   height: 50px;
   margin-top: 12px;
@@ -804,16 +798,16 @@ textarea::placeholder {
  
 }
 
-.subscribe-btn:hover,
-.subscribe-btn:focus {
+.subscribe__btn:hover,
+.subscribe__btn:focus {
   cursor: pointer;
 }
-.tel-logo {
+.subscribe__tel-logo {
   position: relative;
   margin-top: 36px;
   width: 200px;
 }
-.subscribe-btn::after {
+.subscribe__btn::after {
   content: "";
   position: absolute;
   top: 34%;
