--- a/css/styles.css
+++ b/css/styles.css
@@ -239,6 +239,7 @@ img {
 
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0.9);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -261,7 +262,17 @@ img {
 
 }
 
-.icon-close {
+.modal__title {
+  margin-bottom: 30px;
+
+  color: var(--secondary-text-color);
+  font-size: 19px;
+  font-weight: 700;
+  line-height: 23px;
+  letter-spacing: 1.08px;
+  text-align: center;
+}
+.modal__icon-close {
   position: absolute;
   display: flex;
   top: 8px;
@@ -274,7 +285,7 @@ img {
 
 }
 
-.icon-close:hover {
+.modal__icon-close:hover {
   fill: var(--accent-color);
 }
 
@@ -283,24 +294,15 @@ img {
   margin: 0 auto;
 }
 
-.title-modal {
-  margin-bottom: 30px;
 
-  color: var(--secondary-text-color);
-  font-size: 19px;
-  font-weight: 700;
-  line-height: 23px;
-  letter-spacing: 1.08px;
-  text-align: center;
-}
 
-.form-field {
+.form__field {
   position: relative;
   display: block;
 }
   
 
-.form-input {
+.form__input {
   display: block;
   margin-bottom: 28px;
   width: 448px;
@@ -311,12 +313,12 @@ img {
   border-radius: 4px;
 }
 
-.form-margin {
+.form__margin {
   margin-bottom: 10px;
 }
 
 
-.form-label {
+.form__label {
   position: absolute;
   top: 50%;
   left: 40px;
@@ -325,40 +327,40 @@ img {
 
 }
 
-.form-field:focus-within > .form-label {
+.form__field:focus-within > .form__label {
   transform: translate(-40px, -40px);
 }
 
-.form-input:not(:placeholder-shown) + .form-label {
+.form__input:not(:placeholder-shown) + .form__label {
   transform: translate(-40px, -40px);
 }
 
 
-.icon-form {
+.form__icon {
   position: absolute;
   top: 50%;
   left: 15px;
   transform: translateY(-50%);
 }
 
-.form-input:focus .icon-form {
+.form__input:focus .form__icon {
   border: 1px solid var(--accent-color);
 }
 
-.form-field:focus-within > .icon-form {
+.form__field:focus-within > .form__icon{
   fill: var(--accent-color);
 }
 
-.text-field {
+.field-comment {
   display: flex;
   flex-direction: column;
 }
 
-.form-text {
+.field-comment__text {
   margin-bottom: 4px;
 }
 
-textarea {
+.field-comment__textarea {
    padding: 12px 0 0 16px;
    resize: none;
    width: 448px;
@@ -367,13 +369,13 @@ textarea {
 
 }
 
-textarea::placeholder {
+.field-comment__textarea::placeholder {
   color: var(--primary-text-color);
   opacity: 50%;
 }
 
 
-.checkbox {
+.field-agreement__checkbox {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -385,13 +387,13 @@ textarea::placeholder {
     clip-path: inset(100%);
 }
 
-.field {
+.field-agreement {
   display: flex;
   align-items: center;
   margin-bottom: 30px;
 }
 
-.icon {
+.field-agreement__icon {
     display: inline-block;
     width: 15px;
     height: 15px;
@@ -400,7 +402,7 @@ textarea::placeholder {
     margin-right: 9px;
 }
 
-.checkbox:checked + .icon {
+.field-agreement__checkbox:checked + .field-agreement__icon {
     border-color: transparent;
     background-color: var(--accent-color);
     background-image: url(../icons/icon-check.svg);
@@ -408,18 +410,18 @@ textarea::placeholder {
     background-origin: border-box;
 }
 
-.checkbox-lable {
+.field-agreement__lable {
   color: var(--primary-text-color);
   font-size: 14px;
   font-weight: 400;
   line-height: 1.7px;
   letter-spacing: 0.42px;
 }
-.checkbox-lable-link {
+.field-agreement__link {
   color: var(--accent-color)
 }
 
-.form-button {
+.form__button {
   display: block;
   margin: 0 auto;
   color: #ffffff;
@@ -438,8 +440,8 @@ textarea::placeholder {
   background-color: var(--accent-color);
 }
 
-.form-button:hover,
-.form-button :focus{
+.form__button:hover,
+.form__button:focus{
   cursor: pointer;
 }
 /* .close:before, .close:after {
@@ -517,7 +519,7 @@ textarea::placeholder {
   display: block;
   margin-right: 30px;
 }
-.worl__item {
+.work__item {
   position: relative;
 }
 .work__descr-block {
@@ -827,16 +829,16 @@ textarea::placeholder {
 .portfolio {
   padding: 94px 0 94px 0;
 }
-.portfolio .portfolio-nav-list {
+.portfolio__nav {
   display: flex;
   justify-content: center;
   margin-bottom: 34px;
 }
-.portfolio .portfolio-nav-list .item {
+.portfolio__item {
   margin-right: 8px;
 }
 
-.portfolio button {
+.portfolio__button {
   padding: 6px 22px;
 
   color: var(--secondary-text-color);
@@ -855,19 +857,19 @@ textarea::placeholder {
   color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
-.portfolio button:hover,
-.portfolio button:focus {
+.portfolio__button:hover,
+.portfolio__button:focus {
   color: #ffffff;
   background-color: var(--accent-color);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
     0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
   background: rgb(33, 150, 243);
 }
-.portfolio .portfolio-project-list {
+.project {
   display: flex;
   flex-wrap: wrap;
 }
-.portfolio .portfolio-project-list .item {
+.project__item {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
@@ -880,32 +882,32 @@ textarea::placeholder {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-.portfolio .portfolio-project-list .item:hover {
+.project__item:hover {
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),0px 4px 4px 0px rgba(0, 0, 0, 0.06),0px 1px 1px 0px rgba(0, 0, 0, 0.12);
   background: rgb(255, 255, 255);
 }
 
 
-.portfolio .portfolio-project-list .item:nth-child(3n) {
+.project__item:nth-child(3n) {
   margin-right: 0;
 }
-.portfolio .portfolio-project-list .item:nth-last-child(-n + 3) {
+.project__item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
 
-.portfolio-link {
+.project__link {
   display: inline-block;
   padding: 20px 24px;
 }
 
-.portfolio .portfolio-title {
+.project__title {
   color: var(--secondary-text-color);
   font-size: 18px;
   font-weight: 700;
   line-height: 2; /* 200% */
   letter-spacing: 1.08px;
 }
-.portfolio .portfolio-text {
+.project__subtitle {
   color: var(--primary-text-color);
   font-size: 16px;
   font-weight: 400;
@@ -913,12 +915,12 @@ textarea::placeholder {
   letter-spacing: 0.48px;
 }
 
-.portfolio-project-block {
+.project__block {
   position: relative;
   overflow: hidden;
 }
 
-.portfolio-project-animation {
+.project__animation {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -930,7 +932,7 @@ textarea::placeholder {
   background-color: rgba(33, 150, 243, 0.9);
 }
 
-.portfolio .portfolio-project-list .item:hover .portfolio-project-animation {
+.project__item:hover .project__animation {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -941,7 +943,7 @@ textarea::placeholder {
 
 }
 
-.portfolio-project-text {
+.project__text {
   padding: 63px 24px;
   color: #ffffff;
   font-size: 18px;
