--- a/css/styles.css
+++ b/css/styles.css
@@ -829,16 +829,16 @@ img {
 .portfolio {
   padding: 94px 0 94px 0;
 }
-.portfolio__nav {
+.portfolio-nav {
   display: flex;
   justify-content: center;
   margin-bottom: 34px;
 }
-.portfolio__item {
+.portfolio-nav__item:not(:last-child) {
   margin-right: 8px;
 }
 
-.portfolio__button {
+.portfolio-nav__button {
   padding: 6px 22px;
 
   color: var(--secondary-text-color);
@@ -857,8 +857,8 @@ img {
   color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
-.portfolio__button:hover,
-.portfolio__button:focus {
+.portfolio-nav__button:hover,
+.portfolio-nav__button:focus {
   color: #ffffff;
   background-color: var(--accent-color);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
